--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,27 @@ thead {
 .td-1 {
     background-color: #b2e6f2;
 }
+
+footer {
+    padding: 10px;
+}
+
+.suggestion {
+    color: white;
+    margin-top: 10px;
+}
+
+.suggestion-1 {
+    background-image: url(../img/monitor.jpg);
+    width: 210px;
+    height: 160px;
+    padding: 15px;
+    margin-bottom: 10px;
+}
+
+.suggestion-2 {
+    background-image: url(../img/graph.jpg);
+    width: 210px;
+    height: 160px;
+    padding: 15px;
+}
