--- a/bonus/css/style2.css
+++ b/bonus/css/style2.css
@@ -6,6 +6,11 @@ body {
     padding: 10px;
 }
 
+.bonus {
+    width: 75%;
+    margin: auto;
+}
+
 header {
     background-image: url(../img/pattern.png);
     background-repeat: repeat-x;
@@ -15,10 +20,10 @@ header {
     margin-bottom: 10px;
 }
 
-.logo {
-    margin-top: 50px;
-    margin-left: 10px;
-    height: 40px;
+.logo-2 {
+    margin-top: 40px;
+    margin-left: 11%;
+    height: 50px;
 }
 
 h1 {
